# bidking-lab

./: .gitignore  CHANGELOG_HERO_REF_post-v0.1.8.zh-CN.md  DECISIONS.md  DECISIONS_V3.md  OBSERVATIONS.md  OBSERVATIONS_V3.md  PROGRESS.md  PROGRESS_V3.md  README.md  README.zh-CN.md  RELEASE_NOTES_v0.1.8-hotfix.zh-CN.md  RELEASE_NOTES_v0.1.8.zh-CN.md  RELEASE_NOTES_v1.0.0.md  RELEASE_PORTABLE.zh-CN.md  RELEASE_QUICKSTART.zh-CN.md  SHA256SUMS-v0.1.8-hotfix.txt  SHA256SUMS-v0.1.8.txt  TROUBLESHOOTING.md  _commit_msg_tmp.txt  handoff_2026-06-02.zh-CN.md  handoff_2026-06-03.zh-CN.md  handoff_2026-06-04.zh-CN.md  handoff_2026-06-06.zh-CN.md  handoff_2026-06-08.zh-CN.md  handoff_2026-06-10.zh-CN.md  handoff_2026-06-11.zh-CN.md  handoff_2026-06-12.zh-CN.md  handoff_2026-06-13.zh-CN.md  handoff_2026-06-14.zh-CN.md  handoff_prompt_next_window.md  pyproject.toml  requirements-release.txt  requirements.txt  start_ui.ps1
app/: agent_debug_log.py  bg_inference.py  chart_style.py  experimental_tabs.py  hint_pipeline.py  live_recompute.py  startup_wait.py  streamlit_app.py  ui_loading.py  ui_log.py  ui_prefs.py  ui_theme.py  user_guide.py
data/: ui_prefs.json
docs/: HERO_REF_FILE_AND_DOC_INDEX.zh-CN.md  INSTRUCTIONS.zh-CN.md  PROJECT_STRUCTURE_V3.zh-CN.md  auction_analyzer_ahmad_reference_2026-06-08.zh-CN.md  bid_map_schema.md  chat_history_digest.zh-CN.md  engineering_notes.zh-CN.md  fatbeans_capture_analysis_2026-05-27.zh-CN.md  fatbeans_capture_analysis_2026-05-27_package3.zh-CN.md  fatbeans_capture_analysis_2026-05-28_package5.zh-CN.md  handoff_2026-05-27.zh-CN.md  (+21 more)
(+549 files in other folders)
