[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "bidking-lab"
version = "0.1.0"
description = "Unofficial tools & experiments for BidKing (竞拍之王) — data extraction + simulation (WIP)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.0",
  "numpy>=1.26",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
ui = ["streamlit>=1.30", "matplotlib>=3.7"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
